--- a/Lab-1/css/area-style.css
+++ b/Lab-1/css/area-style.css
@@ -3,12 +3,12 @@
 }
 
 p {
-  color: red;
+  padding: 10px;
   font-weight: bold;
   font-size: 1.5rem;
-  border: 1px solid red;
-  padding: 10px;
   font-family: cursive;
-  box-shadow: inset 0 0 10px 10px red;
-  box-shadow:  0 0 10px 10px red;
+  color: red;
+  border: 1px solid red;
+  box-shadow: inset 0px 0px 10px 10px red;
+  box-shadow: 0px 0px 10px 10px red;
 }
