--- a/Lab-1/css/secondF-style.css
+++ b/Lab-1/css/secondF-style.css
@@ -2,16 +2,20 @@
   background-color: #000;
 }
 
-#effect-1, #effect-2, #effect-3, #effect-4, #effect-5 {
+#effect-1,
+#effect-2,
+#effect-3,
+#effect-4,
+#effect-5 {
   position: absolute;
-  margin: auto;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
-  border-radius: 20%;
   width: 700px;
   height: 500px;
+  margin: auto;
+  border-radius: 20%;
 }
 
 #effect-1 {
@@ -26,10 +30,10 @@
 
 #effect-3 {
   animation: effect-3-animation 6s infinite;
-  box-shadow: 0 0 40px 25px green: ;
+  box-shadow: 0 0 40px 25px green;
 }
 
- #effect-4 {
+#effect-4 {
   animation: effect-4-animation 2s infinite;
   box-shadow: 0 0 40px 25px red;
 }
@@ -41,37 +45,38 @@
 
 #effect-6 {
   position: absolute;
-  margin: auto;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
-  border-radius: 20%;
   width: 700px;
   height: 500px;
-  animation: effect-6-animation 5s infinite linear;
+  margin: auto;
+  border-radius: 20%;
   box-shadow: 0 0 40px 10px blue;
+  animation: effect-6-animation 5s infinite linear;
 }
 
 @keyframes effect-6-animation {
-    0% {
-        transform:rotate(0deg);
-        background-color: red;
-    }
-    100% {
-        transform:rotate(360deg);
-        background-color: blue;
-    }
+  0% {
+    transform: rotate(0deg);
+    background-color: red;
+  }
+
+  100% {
+    transform: rotate(360deg);
+    background-color: blue;
+  }
 }
 
 img {
-  border: 3px dashed red;
   position: absolute;
-  margin: auto;
   top: 0;
   bottom: 0;
   right: 0;
   left: 0;
+  margin: auto;
+  border: 3px dashed red;
   border-radius: 20%;
 }
 
@@ -79,6 +84,7 @@ img {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
@@ -88,9 +94,11 @@ img {
   0% {
     opacity: 0;
   }
+
   30% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
@@ -100,9 +108,11 @@ img {
   0% {
     opacity: 0;
   }
+
   50% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
@@ -112,9 +122,11 @@ img {
   0% {
     opacity: 0;
   }
+
   70% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
@@ -124,9 +136,11 @@ img {
   0% {
     opacity: 0;
   }
+
   50% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
